Release History

v1.0.0902.29xx
- deprecated JsonFx.Bindings.register(tag,css,bind,unbind) in favor of more flexible JsonFx.Bindings.add(selector,bind,unbind)
- expanded JsonFx.Bindings.add to accept selector lists
- updated examples to use JsonFx.Bindings.add
- added JsonML.BST.bind to dataBind and hydrate all in one step (including JsonFx behavior binding)
- deprecated JsonFx.UI.bind(jbst,data) in favor of myJbst.bind(data,index) on JBSTs
- updated examples to use myJbst.bind

v1.0.0902.2522
- fix for binding issue where elements getting added may alter the set of elements still being processed
- being less aggressive about CF/LF suppression in JavaScript compaction to be more compatible with broken scripts
- fixed long-standing issue with JSLint which prevented upgrading to latest version of Crockford's code
- upgraded JSLINT to rev 2009-02-13
- adding basic IIS7 handler mappings to web.configs

v1.0.0902.1623
- added an InlineData property on the server jbst:control to directly serialize and bind one-time-use data without needing to name it

v1.0.0902.1608
- fixed a bug in CSS compaction when specifying web fonts with @font-face blocks:
	- fixed at-rules which do not have a value after the identifier
	- fixed at-rules with blocks of declarations (rather than rule-sets)
	- improved whitespace removal in at-rules with blocks of declarations
- fixed a situation where a JBST expression result of undefined or null could generate DOM attributes with that value
- changed "BuildTools" namespace to "JsonFx.BuildTools" for consistency
- enabled ResourceBuildProviders to be able to load referenced assemblies in Mono
- enabled XML comment documentation output and added project warning suppression for 1570,1571,1572,1573,1591,1592

v1.0.0902.0823
- added ability to emit data blocks directly from server jbst:Control (doesn't require additional ScriptDataBlock)
- changed IHttpHanderFactory implementations from explicit to virtual to allow easier extension