@@ -2,11 +2,10 @@
 
 - Find concise way to specify iterating over list with different templates (callback for switch?)
 
-- BUG: HTML collections processed by JsonFx.Bindings continually change while iterating
 - clean up server-side jbst:control (esp. emitting of CSS classes)
-- reconcile overlap between JsonFx libs and jQuery:
-	- JsonFx.UI.Binding vs. jQuery.ready
-	- enable binding by ID, one-time binding
+- BUG: HTML collections processed by JsonFx.Bindings continually change while iterating
+- enable binding by ID, one-time binding
+- reconcile overlap between JsonFx.UI.Binding vs. jQuery.ready
 
 - Solve inserting HTML data into JBST (special <%# this.data.foo %> or <%= HTML(this.data.foo)%>)
 - BUG: something looking like a tag, e.g. "for (var i=0;i<total; i++)", inside a <script> block breaks the block!
